--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="applepie">#DC3030</color>
-    <color name="background1">#E8E8E8</color>
+    <color name="applepie">#D74640</color>
+    <color name="background1">#F8F8F8</color>
 </resources>
