--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="applepie">#D74640</color>
     <color name="background1">#F8F8F8</color>
+    <color name="applepie2">#DC3030</color>
 </resources>
