--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,104 +8,149 @@
     android:background="@color/background1"
     tools:context=".MainActivity">
 
-<View
-    android:id="@+id/bar"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    android:background="@color/background1"
-
-    />
-<TextView
-    android:id="@+id/title"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="App:priend"
-    android:gravity="center"
-    android:textSize="20dp"
-    app:layout_constraintTop_toBottomOf="@id/bar"
-    app:layout_constraintStart_toStartOf="parent"
-    android:background="@color/background1"
-    android:textColor="@color/applepie"
-    android:fontFamily="@font/font3"
-
-    />
-
-
-    <RelativeLayout
-        android:id="@+id/bar2"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:clipToPadding="false"
-            android:paddingBottom="20dp">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/background1"
+                android:fontFamily="@font/font3"
+                android:gravity="center"
+                android:paddingTop="50dp"
+                android:paddingBottom="20dp"
+                android:text="App:priend"
+                android:textColor="@color/applepie"
+                android:textSize="20dp"
+                android:elevation="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <ImageView
-
+                android:id="@+id/banner"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:background="@color/background1"
-                android:elevation="10dp" />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-<ImageView
-    android:id="@+id/banner"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
-    app:layout_constraintTop_toBottomOf="@+id/bar2"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:src="@drawable/banner"
-    android:scaleType="fitCenter"
-android:layout_marginTop="20dp"
-    />
+                android:layout_height="150dp"
+                android:layout_marginTop="20dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/banner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title" />
 
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/banner"
-        android:text="마이 그룹"
-        android:fontFamily="@font/font3"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
-        android:textColor="@color/black"
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="40dp"
 
-        />
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/font3"
+                android:text="마이 그룹"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintTop_toBottomOf="@id/banner"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/text1"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="40dp"
+            <TextView
+                android:id="@+id/groupButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="그룹 메뉴로"
+                android:fontFamily="@font/font3"
+                android:layout_marginEnd="40dp"
+                app:layout_constraintTop_toTopOf="@id/text1"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        />
+            <androidx.recyclerview.widget.RecyclerView
+                android:orientation="horizontal"
+                android:id="@+id/recyclerview1"
+                android:layout_width="match_parent"
+                android:layout_height="168dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@id/text1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
 
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview1"
-        android:text="마이 미션"
-        android:fontFamily="@font/font3"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
-        android:textColor="@color/black"
+            <TextView
+                android:id="@+id/text2"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/font3"
+                android:text="마이 미션"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:layout_marginStart="40dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recyclerview1" />
 
-        />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/createButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#ff2c2c"
+                app:cardCornerRadius="4dp"
+                app:layout_constraintTop_toTopOf="@id/recyclerview1"
+                app:layout_constraintStart_toStartOf="@id/recyclerview1"
+                app:layout_constraintBottom_toBottomOf="@id/recyclerview1"
+                app:layout_constraintEnd_toEndOf="@id/recyclerview1"
+                >
+                <TextView
+                    android:id="@+id/text3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/font3"
+                    android:layout_margin="12dp"
+                    android:text="그룹 만들기"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:layout_marginStart="24dp"
+                    />
 
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintTop_toBottomOf="@id/text2" >
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/font3"
+                    android:textColor="@color/black"
+                    android:text="아직 미션이 없어요"/>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
